# acoruss.github.io

./: .dockerignore  .env_sample  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  README.md  index.html  package-lock.json  playwright.config.js  privacy-policy.html  pyproject.toml  release-please-config.json  terms-of-service.html  vite.config.js
.github/workflows/: build-push.yml  deploy-github-page.yml  deploy-pages.yml  lint-format-test.yml  release-please-pr.yml  release-please-tag.yml  release-please.yml  sync-branches.yml
docker/: Dockerfile  compose.dev.yml  compose.prod.yml
docs/: AcorussWebUpgrade.md  DESIGN.md  InfoAndLinks.md  PRODUCT_PAYMENTS.md  UPGRADE_WORK.md  WebsiteInfo.md
frontend/: package-lock.json  package.json  postcss.config.json  tailwind.config.js
frontend/src/: input.css
old-web/: .eslintrc.json  .prettierrc.json  CNAME  package.json
old-web/.github/workflows/: deploy-pages.yml
old-web/src/: index.html  main.js
scripts/: generate_favicon.py  test.sh
src/: gunicorn_conf.py  index.html  main.js  manage.py  privacy-policy.html  style.css  terms-of-service.html
src/apps/accounts/: __init__.py  admin.py  models.py
src/apps/accounts/migrations/: 0001_initial.py
src/apps/core/: __init__.py  admin.py  context_processors.py  mailer.py  middleware.py  models.py  services.py  urls.py  views.py
src/apps/core/migrations/: 0001_initial.py  (+2 more)
src/apps/payments/: admin.py  api_auth.py  api_urls.py  api_views.py  apps.py  currency_service.py  models.py  services.py  urls.py  views.py  webhook_dispatcher.py
src/config/: __init__.py  asgi.py  urls.py  wsgi.py
src/config/settings/: base.py  dev.py  prod.py  test.py
src/static/css/: main.css
src/static/js/: main.js
src/templates/: about.html  base.html  contact.html  index.html  pricing.html  privacy_policy.html  products.html  projects.html  services.html  terms_of_service.html
src/templates/dashboard/: analytics.html  base.html  home.html  login.html
src/templates/emails/: contact_notification.html
src/templates/payments/: pay.html
tests/: __init__.py  conftest.py  test_payments.py  test_payments_integration.py  test_templates.py  test_views.py
(+10 files in other folders)
