[project]
name = "acoruss-web"
version = "1.0.0"
description = "Acoruss - Empowering Businesses Through Technology"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Acoruss", email = "info@acoruss.com" }]

dependencies = [
    "django>=5.1,<6.0",
    "gunicorn>=23.0",
    "uvicorn[standard]>=0.34",
    "whitenoise[brotli]>=6.8",
    "psycopg[binary]>=3.2",
    "django-environ>=0.11",
    "django-anymail[mailgun]>=12.0",
]

[project.optional-dependencies]
dev = [
    "django-debug-toolbar>=5.0",
    "ruff>=0.9",
    "mypy>=1.14",
    "django-stubs>=5.1",
    "pytest>=8.3",
    "pytest-django>=4.9",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py313"
line-length = 120
src = ["src"]
extend-exclude = ["migrations"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "S",   # flake8-bandit
    "A",   # flake8-builtins
    "C4",  # flake8-comprehensions
    "DJ",  # flake8-django
    "T20", # flake8-print
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = [
    "S101",   # assert used (needed for tests)
    "DJ001",  # nullable CharField (sometimes needed)
]

[tool.ruff.lint.per-file-ignores]
"src/**/migrations/*.py" = ["RUF012", "E501"]

[tool.ruff.lint.isort]
known-first-party = ["apps", "config"]

[tool.mypy]
python_version = "3.13"
plugins = ["mypy_django_plugin.main"]
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "config.settings.dev"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
python_paths = ["src"]
pythonpath = ["src"]
addopts = [
    "--strict-markers",
    "--tb=short",
    "-q",
]
markers = [
    "slow: marks tests as slow",
]
